# Ogiroid

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  alembic.ini  contributing.md  docker-compose.yml  docker-compose.yml.template  main.py  requirements.txt  secrets.env.template  setup.sql
.github/: FUNDING.yml
.github/workflows/: black.yml
alembic/: env.py
alembic/versions/: 0e0f406591d5_.py  213a40388bf3_.py  235e78366c89_.py  35b1f0974ab3_.py  5fc50a2211f8_.py  6546c41828df_.py  6587051215f2_.py  873bf42cf67e_.py  8ba212e14608_.py  aa463358ce38_.py  d03c3abc005d_.py  e24d47b712a1_first.py
cogs/: AI.py  Animals.py  Autoresponder.py  Birthdays.py  Blacklist.py  Botcmds.py  Code.py  Developer.py  ErrorHandler.py  Error_handler.py  Fun.py  Github.py  Image.py  Info.py  Levels.py  Lewis.py  Logs.py  Math.py  Memes.py  Password.py  Quote.py  Redditbot.py  Search.py  Snipe.py  Staff.py  Starboard.py  Stats.py  Support.py  Tags.py  Tickets.py  Timezone.py  Trivia.py  Welcome.py  YouTube.py  animals.py  blacklist.py  botcmds.py  btc.py  classic game.py  code.py  (+29 more)
cogs/utils/: CONSTANTS.py  bot.py  cache.py  http.py
ew_python/: CONTRIBUTING.md  LICENSE  main.py
ew_python/cogs/: AI.py  Blacklist.py  Developer.py  Fun.py  (+4 more)
migrations/: v1.sql
src/: cli.rs  event.rs  image_utils.rs  main.rs  state.rs  util.rs
utils/: CONSTANTS.py  DBhandelers.py  DBhandlers.py  assorted.py  bot.py  cache.py  checks.py  config.py  db_models.py  exceptions.py  formats.py  http.py  models.py  pagination.py  rankcard.py  shortcuts.py  timeconversions.py
(+20 files in other folders)
