[package]
name = "rougiroid"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env"] }
poise = "0.5.2"
stretto = { version = "0.7.1", features = ["async"] }
tokio = { version = "1.22.1", features = ["macros", "rt-multi-thread"] }
