[package]
name = "rougiroid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env", "color"] }
poise = "0.5.2"
rkyv = { version = "0.7.39", features = ["validation", "archive_le"] }
serde = "1.0.152"
stretto = { version = "0.7.1", features = ["async"] }
tokio = { version = "1.22.1", features = ["macros", "rt-multi-thread"] }
bytecheck = "0.6.9"
byteorder = "1.4.3"
imageproc = "0.23.0"
image = "0.24.5"
[dependencies.rocksdb]
default-features = false
features = ["lz4", "multi-threaded-cf"]
version = "0.19"
